p2/confs/app3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
        - name: app3-container
          image: localhost:5000/app3:v1
          ports:
            - containerPort: 80
